# notepadpp-llm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  get-headers.ps1  verify.ps1
docs/: BUILD.md  BUILD_CMAKE.md  MCP.md  MCP_INVENTORY.md
include/: Notepad_plus_msgs.h  Sci_Position.h
mcp_server/: npp_mcp_server.py
src/: NppLlm.rc  PluginDefinition.cpp  PluginDefinition.h
src/editor/: Editor.cpp  Editor.h
src/mcp/: BridgeServer.cpp  BridgeServer.h
src/ui/: ChatPanel.cpp  ChatPanel.h
